--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,12 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
+        "scheb/two-factor-bundle": "3.x-dev@dev",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
+        "symfony/monolog-bundle": "^3.1",
         "symfony/profiler-pack": "^1.0",
         "symfony/security-bundle": "^4.0",
         "symfony/swiftmailer-bundle": "^3.1",
