--- a/config/packages/scheb_two_factor.yaml
+++ b/config/packages/scheb_two_factor.yaml
@@ -26,14 +26,14 @@ scheb_two_factor:
         sender_email: me@example.com   # Sender email address
         sender_name: John Doe          # Sender name
         digits: 4                      # Number of digits in authentication code
-#        template: AcmeDemoBundle:Authentication:form.html.twig   # Template used to render the authentication form
+        template: security/2fa.html.twig   # Template used to render the authentication form
 
     # Google Authenticator config
     google:
         enabled: true                  # If Google Authenticator should be enabled, default false
         server_name: Server Name       # Server name used in QR code
         issuer: Issuer Name            # Issuer name used in QR code
-#        template: AcmeDemoBundle:Authentication:form.html.twig   # Template used to render the authentication form
+        template: security/2fa.html.twig   # Template used to render the authentication form
 
     # The service which is used to persist data in the user object. By default Doctrine is used. If your entity is
     # managed by something else (e.g. an API), you have to implement a custom persister
