--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,6 +21,10 @@ security:
             logout:
                 path:   _security_logout
                 target: home
+            two-factor:
+                auth_form_path: 2fa_login
+                check_path: 2fa_login_check
     access_control:
         - { path: /login, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /logout, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/2fa, role: IS_AUTHENTICATED_2FA_IN_PROGRESS }
