--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "symfony/profiler-pack": "^1.0",
         "symfony/security-bundle": "^4.0",
         "symfony/swiftmailer-bundle": "^3.1",
+        "symfony/templating": "^4.0",
         "symfony/translation": "^4.0",
         "symfony/twig-bundle": "^4.0",
         "symfony/web-server-bundle": "^4.0",
