--- a/config/packages/scheb_two_factor.yaml
+++ b/config/packages/scheb_two_factor.yaml
@@ -3,11 +3,12 @@ scheb_two_factor:
 
     # Trusted computer feature
     trusted_computer:
-        enabled: false                 # If the trusted computer feature should be enabled
+        enabled: true                  # If the trusted computer feature should be enabled
+        lifetime: 5184000              # Lifetime of the trusted computer cookie
+        extend_lifetime: true
         cookie_name: trusted_computer  # Name of the trusted computer cookie
-        cookie_lifetime: 5184000       # Lifetime of the trusted computer cookie
         cookie_secure: false           # Set the 'Secure' (HTTPS Only) flag on the trusted_computer cookie
-        cookie_same_site: "lax"     # The same-site option of the cookie, can be "lax" or "strict"
+        cookie_same_site: "lax"        # The same-site option of the cookie, can be "lax" or "strict"
 
     # POST/GET parameter names
     parameter_names:
