--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -24,6 +24,8 @@ security:
             two-factor:
                 auth_form_path: 2fa_login
                 check_path: 2fa_login_check
+                auth_code_parameter_name: _auth_code          # Name of the parameter containing the authentication code
+                trusted_parameter_name: _trusted              # Name of the parameter containing the trusted flag
     access_control:
         - { path: /login, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /logout, role: IS_AUTHENTICATED_ANONYMOUSLY }
