--- a/config/packages/scheb_two_factor.yaml
+++ b/config/packages/scheb_two_factor.yaml
@@ -10,6 +10,9 @@ scheb_two_factor:
         cookie_secure: false           # Set the 'Secure' (HTTPS Only) flag on the trusted device cookie
         cookie_same_site: "lax"        # The same-site option of the cookie, can be "lax" or "strict"
 
+    backup_codes:
+        enabled: true  # If the backup code feature should be enabled
+
     # Email authentication config
     email:
         enabled: true                  # If email authentication should be enabled, default false
