--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -26,6 +26,7 @@ security:
                 check_path: 2fa_login_check
                 auth_code_parameter_name: _auth_code          # Name of the parameter containing the authentication code
                 trusted_parameter_name: _trusted              # Name of the parameter containing the trusted flag
+                multi_factor: true
     access_control:
         - { path: /login, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /logout, role: IS_AUTHENTICATED_ANONYMOUSLY }
