--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -8,7 +8,8 @@ _security_logout:
 2fa_login:
     path: /2fa
     defaults:
-        _controller: "SchebTwoFactorBundle:Authentication:form"
+        _controller: "scheb_two_factor.form_controller:form"
+
 
 2fa_login_check:
     path: /2fa_check
