--- a/composer.json
+++ b/composer.json
@@ -4,23 +4,26 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
+        "doctrine/doctrine-bundle": "^1.8",
+        "doctrine/doctrine-migrations-bundle": "^1.3",
         "scheb/two-factor-bundle": "^3.0",
-        "symfony/console": "^4.0",
+        "symfony/console": "^3.4",
+        "symfony/doctrine-bridge": "^3.4",
         "symfony/flex": "^1.0",
-        "symfony/framework-bundle": "^4.0",
+        "symfony/framework-bundle": "^3.4",
         "symfony/lts": "^4@dev",
         "symfony/monolog-bundle": "^3.1",
         "symfony/profiler-pack": "^1.0",
-        "symfony/security-bundle": "^4.0",
+        "symfony/security-bundle": "^3.4",
         "symfony/swiftmailer-bundle": "^3.1",
-        "symfony/templating": "^4.0",
-        "symfony/translation": "^4.0",
-        "symfony/twig-bundle": "^4.0",
-        "symfony/web-server-bundle": "^4.0",
-        "symfony/yaml": "^4.0"
+        "symfony/templating": "^3.4",
+        "symfony/translation": "^3.4",
+        "symfony/twig-bundle": "^3.4",
+        "symfony/web-server-bundle": "^3.4",
+        "symfony/yaml": "^3.4"
     },
     "require-dev": {
-        "symfony/dotenv": "^4.0"
+        "symfony/dotenv": "^3.4"
     },
     "config": {
         "preferred-install": {
