--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -29,6 +29,8 @@ security:
                 multi_factor: true
                 provider: our_db_provider
     access_control:
-        - { path: /login, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: /logout, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/logout, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/login, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/2fa, role: IS_AUTHENTICATED_2FA_IN_PROGRESS }
+        - { path: ^/members, role: ROLE_USER }                # Secured member's area
+        - { path: ^/, role: IS_AUTHENTICATED_ANONYMOUSLY }    # Everything else is publicly accessible
