Use authentication guard instead

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -15,9 +15,12 @@ security:
             pattern:    ^/
             anonymous: ~
             provider: our_db_provider
-            form_login:
-                login_path: _security_login
-                check_path: _security_login
+#            form_login:
+#                login_path: _security_login
+#                check_path: _security_login
+            guard:
+                authenticators:
+                    - App\Security\LoginFormAuthenticator
             logout:
                 path:   _security_logout
                 target: home
