--- a/config/packages/scheb_two_factor.yaml
+++ b/config/packages/scheb_two_factor.yaml
@@ -42,6 +42,7 @@ scheb_two_factor:
     # two-factor authentication for other authentication methods, add their security token classes.
     security_tokens:
         - Symfony\Component\Security\Core\Authentication\Token\UsernamePasswordToken
+        - Symfony\Component\Security\Guard\Token\PostAuthenticationGuardToken
 
     # A list of IP addresses, which will not trigger two-factor authentication
     ip_whitelist: ~
