--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-iconv": "*",
         "doctrine/doctrine-bundle": "^1.8",
         "doctrine/doctrine-migrations-bundle": "^1.3",
+        "doctrine/orm": "^2.6",
         "scheb/two-factor-bundle": "^3.0",
         "symfony/console": "^3.4",
         "symfony/doctrine-bridge": "^3.4",
