--- a/composer.json
+++ b/composer.json
@@ -5,25 +5,25 @@
         "php": "^7.1.3",
         "ext-iconv": "*",
         "scheb/two-factor-bundle": "dev-master@dev",
-        "symfony/console": "^4.0",
+        "symfony/symfony": "v5.0.0-RC1 as 4.4.0",
+        "symfony/console": "v5.0.0-RC1 as 4.4.0",
         "symfony/flex": "^1.0",
-        "symfony/form": "^4.0",
-        "symfony/framework-bundle": "^4.0",
-        "symfony/lts": "^4@dev",
+        "symfony/form": "v5.0.0-RC1 as 4.4.0",
+        "symfony/framework-bundle": "v5.0.0-RC1 as 4.4.0",
         "symfony/monolog-bundle": "^3.1",
         "symfony/orm-pack": "^1.0",
         "symfony/profiler-pack": "^1.0",
-        "symfony/security-bundle": "^4.0",
-        "symfony/security-csrf": "^4.0",
+        "symfony/security-bundle": "v5.0.0-RC1 as 4.4.0",
+        "symfony/security-csrf": "v5.0.0-RC1 as 4.4.0",
         "symfony/swiftmailer-bundle": "^3.1",
-        "symfony/templating": "^4.0",
-        "symfony/translation": "^4.0",
-        "symfony/twig-bundle": "^4.0",
-        "symfony/web-server-bundle": "^4.0",
-        "symfony/yaml": "^4.0"
+        "symfony/templating": "v5.0.0-RC1 as 4.4.0",
+        "symfony/translation": "v5.0.0-RC1 as 4.4.0",
+        "symfony/twig-bundle": "v5.0.0-RC1 as 4.4.0",
+        "symfony/web-server-bundle": "v4.4.0-RC1 as 4.4.0",
+        "symfony/yaml": "v5.0.0-RC1 as 4.4.0"
     },
     "require-dev": {
-        "symfony/dotenv": "^4.0"
+        "symfony/dotenv": "v5.0.0-RC1 as 4.4.0"
     },
     "config": {
         "preferred-install": {
@@ -59,9 +59,7 @@
             "@auto-scripts"
         ]
     },
-    "conflict": {
-        "symfony/symfony": "*"
-    },
+    "minimum-stability": "beta",
     "extra": {
         "symfony": {
             "id": "01C4YFXFEJ1RCKS0ZTZ9H88710",
