--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -27,6 +27,10 @@ security:
                 auth_code_parameter_name: _auth_code          # Name of the parameter containing the authentication code
                 trusted_parameter_name: _trusted              # Name of the parameter containing the trusted flag
                 multi_factor: true
+            remember_me:
+                secret:   '%kernel.secret%'
+                lifetime: 604800 # 1 week in seconds
+                path:     /
     access_control:
         - { path: /login, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: /logout, role: IS_AUTHENTICATED_ANONYMOUSLY }
