--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -33,6 +33,10 @@ security:
                 provider: our_db_provider
                 prepare_on_login: true
                 prepare_on_access_denied: true
+            remember_me:
+                secret:   '%kernel.secret%'
+                lifetime: 604800 # 1 week in seconds
+                path:     /
     access_control:
         #- { path: ^/logout, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/login, role: IS_AUTHENTICATED_ANONYMOUSLY }
